cluster/ngircd/ingress.yaml
---
# All this does is  grab a certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netpub
  namespace: ngircd
  annotations:
    kubernetes.io/ingress.class: internal
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: netpub.sko.ai
    http:
      paths:
      - backend:
          service:
            name: http-echo
            port:
              number: 80
        path: /ngircd
        pathType: Prefix
  tls:
  - hosts:
    - netpub.sko.ai
    secretName: netpub-cert
